k8s/app-manifest/j26-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-app
  template:
    metadata:
      labels:
        app: j26-app
    spec:
      containers:
        - name: j26-app
          image: ghcr.io/scouterna/j26-app:latest
          ports:
            - containerPort: 80
