k8s/app-manifest/j26-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    # cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.dev.j26.se
      secretName: j26-app-tls-secret
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: j26-app
                port:
                  number: 80
