k8s/app-manifest/j26-app/j26-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: j26-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-app
  template:
    metadata:
      labels:
        app: j26-app
    spec:
      containers:
      - name: j26-app
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        securityContext: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: j26-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: j26-app
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: j26-app
  labels:
    app: j26-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.j26.se
      secretName: j26-app-tls-secret
  rules:
    - host: app.j26.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: j26-app
                port:
                  number: 8080
